Refactor Docker setup and scripts for improved production environment
- Updated package.json to replace the install-docker script with a new prod script for streamlined production setup.
- Enhanced docker-compose files to include persistent volumes and improved PostgreSQL configuration for network connections.
- Introduced an initialization script for PostgreSQL to ensure proper configuration on first run.
- Removed outdated scripts and consolidated functionality into the new prod.sh script, simplifying the deployment process.
- Improved error handling and user prompts in the new production script for better user experience.

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -8,10 +8,18 @@ services:
       POSTGRES_USER: ${POSTGRES_USER:-memoriae}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-memoriae}
       POSTGRES_DB: ${POSTGRES_DB:-memoriae}
+      # Set default authentication method for network connections
+      POSTGRES_HOST_AUTH_METHOD: scram-sha-256
     ports:
       - "${POSTGRES_PORT:-5432}:5432"
     volumes:
+      # Persistent volume - data survives container recreation
+      # CRITICAL: This volume contains all your database data
       - memoriae-postgres-data-dev:/var/lib/postgresql/data
+      # Init script runs once on first database initialization only
+      - ./init-postgres-hba.sh:/docker-entrypoint-initdb.d/01-init-hba.sh:ro
+    # Configure PostgreSQL to listen on all network interfaces
+    command: ["postgres", "-c", "listen_addresses=*"]
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-memoriae}"]
       interval: 5s
@@ -89,8 +97,14 @@ services:
       - memoriae-network-dev
 
 volumes:
+  # Persistent volumes - data is preserved across container restarts
+  # WARNING: These volumes contain your database data. Only remove with --clean if you want to lose all data.
   memoriae-postgres-data-dev:
+    driver: local
+    # Volume persists even if containers are removed
   memoriae-redis-data-dev:
+    driver: local
+    # Volume persists even if containers are removed
 
 networks:
   memoriae-network-dev:
