--- a/backend/package.json
+++ b/backend/package.json
@@ -49,6 +49,7 @@
     "fast-json-patch": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "loglevel": "^1.9.1",
     "luxon": "^3.7.2",
     "pg": "^8.11.3",
     "uuid": "^13.0.0"
