--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "@headless-tree/core": "^1.5.1",
     "@headless-tree/react": "^1.5.1",
     "axios": "^1.6.5",
+    "loglevel": "^1.9.1",
     "lucide-react": "^0.552.0",
     "luxon": "^3.7.2",
     "react": "^19.0.0",
