Add migration fix script and update tests for sprouts functionality
- Introduced a new script `fix-migration-033.sh` to address issues with migration 033, ensuring the correct state of the `seed_transactions` table after migration failures.
- Added `fix-sprout-tests.sh` to automate updates in test files, replacing deprecated `vi.spyOn` patterns with a queue-based approach for better test reliability.
- Created integration tests for the new sprouts routes, covering various scenarios including authentication, creation, dismissal, and completion of followup and musing sprouts.
- Enhanced existing tests for the followup and musing handlers to ensure robust error handling and state management.
- Updated Docker configurations to streamline development environment setup and ensure proper migration execution.

--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -30,8 +30,9 @@ COPY mother-theme/ ./mother-theme/
 
 # Copy startup scripts
 COPY docker/start-backend.sh /start-backend.sh
+COPY docker/start-dev.sh /start-dev.sh
 COPY docker/run-migrations.sh /run-migrations.sh
-RUN chmod +x /start-backend.sh /run-migrations.sh
+RUN chmod +x /start-backend.sh /start-dev.sh /run-migrations.sh
 
 # Install PostgreSQL client for migration checks
 RUN apt-get update && apt-get install -y \
