Add Playwright visual testing setup and component tests
- Updated .gitignore to include Playwright test results and reports.
- Added Playwright configuration for component testing, enabling visual regression tests.
- Introduced new visual tests for various components including BottomNavigation, CategoryTree, MusingItem, SeedComposer, and more, ensuring consistent UI rendering.
- Enhanced existing test setup with utilities for managing visual tests and mock data.
- Updated vitest configuration to exclude visual tests from regular test runs, streamlining the testing process.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,11 @@ coverage/
 *.lcov
 .nyc_output
 
+# Playwright
+test-results/
+playwright-report/
+playwright/.cache/
+
 # Production builds
 dist/
 build/
