--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,9 @@
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
     "test:watch": "vitest",
+    "test:visual": "playwright test --config=playwright-ct.config.ts",
+    "test:visual:update": "playwright test --config=playwright-ct.config.ts --update-snapshots",
+    "test:visual:ui": "playwright test --config=playwright-ct.config.ts --ui",
     "bt": "npm run build && npm run test:coverage",
     "bt:watch": "npm run build && npm run test:watch",
     "publish": "./scripts/publish.sh",
@@ -51,6 +54,7 @@
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
+    "@playwright/experimental-ct-react": "^1.40.0",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.5.1",
@@ -66,6 +70,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "jsdom": "^23.0.1",
+    "playwright": "^1.40.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vitest": "^1.1.0"
