Implement unified script system for all packages
- Added a root script `for-all.sh` to streamline type-checking, building, unit-testing, and visual-testing across all packages with flexible flag combinations.
- Introduced individual package scripts for backend, frontend, and mother-theme to support the unified system.
- Enhanced package.json files to include new script commands for easier execution of operations.
- Updated Playwright configuration for improved testing capabilities and adjusted timeout settings for visual tests.
- Created comprehensive shell scripts to manage operations with real-time status updates and error handling.
- Added new HTML entry point for the mother-theme to facilitate component testing.

--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,13 @@
     "access": "public"
   },
   "scripts": {
+    "my": "./scripts/for-me.sh",
+    "my:tc": "./scripts/for-me.sh --tc",
+    "my:b": "./scripts/for-me.sh --b",
+    "my:u": "./scripts/for-me.sh --u",
+    "my:bu": "./scripts/for-me.sh --bu",
+    "my:tc:u": "./scripts/for-me.sh --tc --u",
+    "type-check": "tsc --noEmit",
     "build": "tsc",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
