--- a/package.json
+++ b/package.json
@@ -5,6 +5,17 @@
   "description": "Memoriae - Memory and note-taking application",
   "scripts": {
     "prepare": "node -e \"const fs = require('fs'); const path = require('path'); const { execSync } = require('child_process'); const isWin = process.platform === 'win32'; const huskyBin = isWin ? 'husky.cmd' : 'husky'; const huskyPath = path.join(__dirname, 'node_modules', '.bin', huskyBin); if (fs.existsSync(huskyPath)) { execSync((isWin ? '' : 'node ') + huskyPath + ' install', { stdio: 'inherit', cwd: __dirname }); }\"",
+    "a": "./scripts/for-all.sh",
+    "a:tc": "./scripts/for-all.sh --tc",
+    "a:b": "./scripts/for-all.sh --b",
+    "a:u": "./scripts/for-all.sh --u",
+    "a:v": "./scripts/for-all.sh --v",
+    "a:bu": "./scripts/for-all.sh --bu",
+    "a:bv": "./scripts/for-all.sh --bv",
+    "a:buv": "./scripts/for-all.sh --buv",
+    "a:tc:u": "./scripts/for-all.sh --tc --u",
+    "a:tc:v": "./scripts/for-all.sh --tc --v",
+    "a:tc:u:v": "./scripts/for-all.sh --tc --u --v",
     "dev": "./docker/scripts/dev.sh",
     "prod": "./docker/scripts/prod.sh",
     "install-docker": "./docker/scripts/prod.sh",
