--- a/mother-theme/package.json
+++ b/mother-theme/package.json
@@ -27,8 +27,21 @@
     "access": "public"
   },
   "scripts": {
+    "my": "./scripts/for-me.sh",
+    "my:tc": "./scripts/for-me.sh --tc",
+    "my:b": "./scripts/for-me.sh --b",
+    "my:u": "./scripts/for-me.sh --u",
+    "my:v": "./scripts/for-me.sh --v",
+    "my:bu": "./scripts/for-me.sh --bu",
+    "my:bv": "./scripts/for-me.sh --bv",
+    "my:buv": "./scripts/for-me.sh --buv",
+    "my:tc:u": "./scripts/for-me.sh --tc --u",
+    "my:tc:v": "./scripts/for-me.sh --tc --v",
+    "my:tc:u:v": "./scripts/for-me.sh --tc --u --v",
+    "type-check": "tsc --noEmit",
     "build": "tsc",
     "test": "vitest run --no-watch",
+    "test:visual": "playwright test --config=playwright-ct.config.ts",
     "test:coverage": "vitest run --coverage",
     "test:watch": "vitest",
     "bt": "npm run build && npm run test:coverage",
@@ -37,11 +50,11 @@
   },
   "dependencies": {
     "lucide-react": "^0.552.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@playwright/experimental-ct-react": "^1.40.0",
+    "@playwright/experimental-ct-react": "^1.56.1",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.5.1",
@@ -52,14 +65,10 @@
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^1.1.0",
     "jsdom": "^23.0.1",
-    "playwright": "^1.40.0",
+    "playwright": "^1.56.1",
     "react-router-dom": "^7.9.5",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vitest": "^1.1.0"
-  },
-  "peerDependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
   }
 }
